style: fix nav icon color for dark mode

--- a/design/src/styles/layout/nav.css
+++ b/design/src/styles/layout/nav.css
@@ -42,6 +42,10 @@
 	width: 50px;
 }
 
+.icon-menu svg path {
+	fill: var(--primary-font-color);
+}
+
 /* When the screen is less than 768 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 48em) {
 	.topnav {
